package es.grupoO.FastFood.factory;

public class PlatosFactory {
}
