package es.grupoO.FastFood.model.state;

public enum CategoriaRestaurante {
    EXICANO,
    ITALIANO,
    CHINO,
    AMERICANO,
}
