package es.grupoO.FastFood.services;
import es.grupoO.FastFood.model.valueobject.Precio;
import org.springframework.stereotype.Service;

@Service
public class PagosService {
    public void realizarPago(double cantidad) {
        // TODO: Crear placeholder de pasarela de pago
    }
}
